--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,6 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Jan 25 18:12:41 MSK 2019
+#Sat Feb 02 18:58:15 MSK 2019
+ndk.dir=/Users/egor.kurnikov/Library/Android/sdk/ndk-bundle
 sdk.dir=/Users/egor.kurnikov/Library/Android/sdk
